# pipeline_airflow_p

./: .dockerignore  .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt
dags/: aggregate_dag.py  consts.py
dags/concurrent/: aggregate_multiprocess.py  aggregate_multithread.py  aggregate_onethread.py  utils.py
dags/funcs/: aggregate.py  clean.py  schema.py  utils.py
logs_test/: aggregate_multiprocess.txt  aggregate_multithread.txt  aggregate_onethread.txt
