[tool.poetry]
name = "airflow_project"
version = "0.1.0"
description = ""
authors = ["Vitaliy Drozdov <vitdrzdv@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
apache-airflow-providers-amazon = "^8.29.0"
pandas = "^2.2.3"
pyarrow = "^17.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.0"
apache-airflow = "^2.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
